# dash-chat-next

./: README.md  flake.nix  index.html  mprocs.yaml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 2.B_Pbr2tD.css  3.DxOzS4mb.css  4.CkD63nvf.css  5.BTIuK1qr.css
.svelte-kit/output/client/_app/immutable/chunks/: B5_lSiN-.js  BDAMK1gS.js  CwdQBBZU.js  D6nPkcoS.js  D73Bnykk.js  DKTCnNbX.js  DRPFIkrd.js  DycXGPVy.js
.svelte-kit/output/client/_app/immutable/entry/: app.yZZjzzJe.js  start.CtHn8Ovm.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.CBL-MVNK.js  1.BfR4vrXg.js  2.BLMcAbHy.js  3.Dd04Ip6Z.js  4.S9dDoW_d.js  5.CBq_NJL0.js
.svelte-kit/output/server/: index.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _layout.BfcZ9XOJ.css  _page.Bqq2R9yI.css  _page.C6xhg4UW.css  _page.f7Q1XQj0.css
.svelte-kit/output/server/chunks/: context.js  index-server.js  index.js  index2.js  internal.js  stores2.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/entries/pages/chat/_chatId_/: _page.svelte.js
.svelte-kit/output/server/entries/pages/friends/: _page.svelte.js
.svelte-kit/output/server/entries/pages/groups/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/chat/[chatId]/: $types.d.ts
.svelte-kit/types/src/routes/groups/: $types.d.ts
dashchat-node/: Cargo.toml  TODO.md
dashchat-node/src/: chat.rs  forge.rs  friend.rs  lib.rs  message.rs  network.rs  node.rs  operation.rs  spaces.rs  store.rs  util.rs
dashchat-node/src/chat/: message.rs  tests.rs
dashchat-node/src/node/: author_operation.rs  stream_processing.rs
dashchat-node/src/polestar/: action.rs  mod.rs
dashchat-node/src/spaces/: control_message.rs  store.rs
dashchat-node/src/testing/: introduce.rs  mod.rs  test_node.rs
dashchat-node/tests/: groups.rs
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chat.rs  forge.rs  lib.rs  main.rs  message.rs  network.rs  node.rs  operation.rs  spaces.rs
src-tauri/src/node/: author_operation.rs  stream_processing.rs
src-tauri/src/spaces/: control_message.rs  store.rs
src/lib/: stores.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/chat/[chatId]/: +page.svelte
src/routes/friends/: +page.svelte
src/routes/groups/: +page.svelte
