[package]
name = "p2pandashchat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "p2panda_tauri_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dashchat-node = { path = "../dashchat-node" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2.7.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

derive_more = { version = "1.0.0", features = ["full"] }
rand = "0.9.2"
tokio = { version = "1.43.0", features = ["fs"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[patch."https://github.com/p2panda/p2panda.git"]
p2panda-auth = { path = "/home/michael/gitfork/p2panda/p2panda-auth" }
p2panda-core = { path = "/home/michael/gitfork/p2panda/p2panda-core" }
p2panda-encryption = { path = "/home/michael/gitfork/p2panda/p2panda-encryption" }
p2panda-discovery = { path = "/home/michael/gitfork/p2panda/p2panda-discovery" }
p2panda-net = { path = "/home/michael/gitfork/p2panda/p2panda-net" }
p2panda-store = { path = "/home/michael/gitfork/p2panda/p2panda-store" }
p2panda-stream = { path = "/home/michael/gitfork/p2panda/p2panda-stream" }
p2panda-sync = { path = "/home/michael/gitfork/p2panda/p2panda-sync" }
p2panda-spaces = { path = "/home/michael/gitfork/p2panda/p2panda-spaces" }
